--- a/src/components/Home/ServiceCard/ServiceCard.css
+++ b/src/components/Home/ServiceCard/ServiceCard.css
@@ -2,3 +2,10 @@
   font-size: 3rem;
   margin: 0 auto;
 }
+.card-animation:hover {
+  transform: scale(0.95);
+}
+.button-animation:hover {
+  transform: scale(0.9);
+  color: black;
+}
